fixed vector field

--- a/Assignment_Submissions/PS8/latex/ps8_RodrigoChavez.tex
+++ b/Assignment_Submissions/PS8/latex/ps8_RodrigoChavez.tex
@@ -70,7 +70,7 @@ To see how close to constant the potential is in the interior of the box, we com
 	\centering
 	\includegraphics[width=0.45\linewidth]{../Results/2c2.png}
 \end{figure}
-Unsurprisingly, the magnitude of the electric field is larger for regions around larger charge density as found in b). Interpreting the electric field magnitude, we can say that the potential is close to constant towards the middle of the square. Again, the unexpected potential at the boundaries result in strange electric field behavior around the boundaries. 
+Unsurprisingly, the magnitude of the electric field is larger for regions around larger charge density as found in b). Interpreting the electric field magnitude, we can say that the potential is close to constant towards the middle of the square. Note that we cut off the edges of the entire region to avoid the strange potential behavior.
 
 We now look at the electric field line directions just outside of the box. As expected, The electric field lines are perpendicular to equipotential lines.
 
